--- a/src/components/Pages/Jobmarket/Jobmarket.css
+++ b/src/components/Pages/Jobmarket/Jobmarket.css
@@ -140,7 +140,7 @@
   color: white;
 }
 
-.contact-button {
+.jq-contact-button {
   /* border: 2px solid #348d59;
   background-color: white; */
   background-color: #42b371;
@@ -153,7 +153,7 @@
   cursor: pointer;
 }
 
-.contact-button:hover {
+.jq-contact-button:hover {
   color: white;
   background-color: #348d59;
   cursor: pointer;
