--- a/src/components/Pages/Profiles/Profiles.css
+++ b/src/components/Pages/Profiles/Profiles.css
@@ -12,7 +12,7 @@
   height: 350px;
   background-color: white;
   border-radius: 5px;
-  box-shadow: 0 0 10pt 1pt var(--grey);
+  box-shadow: 0 0 10pt 1pt var(--bg-grey);
   display: flex;
   flex-direction: column;
   margin: 20px;
