--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
   --bg-white: rgba(240, 240, 240, 1);
   --blue: #0087a8;
   --dark-blue: #005b72;
-  --grey: hsla(192, 17%, 60%, 0.52);
-  --dark-grey: #1e2729;
+  --bg-grey: hsla(192, 17%, 60%, 0.52);
   --black: #242424;
+
   --navbar-height: 70px;
 }
 
