--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -4,12 +4,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 300;
   position: sticky;
   top: 0;
   z-index: 20;
-  padding: 0 3px 0 3px;
+  height: var(--navbar-height);
+  height: 350px;
+  /* padding: 0 3px 0 3px; */
   /* Positive z-index makes navbar stay top. E.g. not behind text */
 }
 
@@ -18,73 +20,73 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 80px;
+  height: 100%;
   /* max-width: 1500px; ?? why thou */
+}
+
+.nav-icon.nav-menu {
+  display: none;
+}
+
+.nav-menu {
+  border: 1px solid wheat;
+  display: flex;
+  list-style: none;
+  text-align: center;
+  width: 100%;
+  height: var(--navbar-height);
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  /* margin-right: 2rem; */
 }
 
 .nav-logo {
   color: var(--bg-white);
-  align-items: center;
-  margin-left: 20px;
+  justify-content: flex-start;
   cursor: pointer;
   /* Which cursor is shown when hovering */
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   /* flex-grow: 1; */
 }
 
-.fa-code {
-  /* ?? needed ?? */
-  margin-left: 1rem;
+.constant-links {
+  justify-content: flex-end;
 }
 
-.nav-menu {
-  display: flex;
-  list-style: none;
-  text-align: center;
-  /* margin-right: 2rem; */
+.hidden-links {
+  justify-content: center;
 }
 
 .nav-item {
-  line-height: 40px;
+  /* border: 1px solid pink; */
+  /* line-height: 40px; */
+  margin: 0 3px; 
+  height: calc(var(--navbar-height) - 20px);
   /* Space between rows. 1.6 (unitless) is recommended */
-  margin-right: 1rem; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-links {
   color: var(--bg-white);
   text-decoration: none;
   padding: 0.5rem 1rem; 
-  height: 100%;
-  border-bottom: 3px solid transparent;
+  transition: box-shadow 0.2s ease;
 }
 
-.nav-item:after {
-  content: "";
-  display: block;
-  height: 3px;
-  width: 0;
-  background: transparent;
-  transition: width 0.3s ease, background-color 1s ease;
+.nav-links:hover {
+  box-shadow: 0pt 4pt 2pt -2pt var(--dark-blue);
 }
 
-.nav-item:hover:after {
-  width: 100%;
-  background: var(--dark-blue);
-}
-
-.nav-item .active {
-  /* background-color: var(--dark-blue); */
-  /* outline: 2px solid var(--dark-blue); */
+.nav-links.active {
   box-shadow: 0 0 2pt 1pt var(--dark-blue);
 }
 
 .nav-item.dropdown .active{
   box-shadow: none;
-}
-
-.nav-icon {
-  display: none;
 }
 
 .dropdown-container {
@@ -100,6 +102,7 @@
 }
 
 .dropdown-container {
+  margin: 0;
   transition: background-color 0.5s ease;
 }
 
@@ -130,17 +133,25 @@
 
 @media screen and (max-width: 960px) {
   .navbar {
-    min-width: 320px;
+    /* min-width: 320px; */
+    width: 100%;
+    /* border: 1px solid red; */
+  }
+
+  .nav-container {
+    width: 100%;
+    border: 1px solid red;
   }
 
   .nav-menu.hidden-links {
+    border: 1px solid yellow;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    width: 80%;
+    height: calc(100vh - var(--navbar-height));
     position: absolute;
-    border-top: 2px solid var(--dark-blue);
     top: var(--navbar-height);
+    border-top: 2px solid var(--dark-blue);
     left: -110%;
     opacity: 1;
     transition: all .5s ease-in-out;
@@ -148,27 +159,32 @@
 
   .nav-menu.hidden-links.active {
     background-color: var(--dark-blue);
-    left: 0px;
-    opacity: 1;
+    left: 0;
     /* transition: all 0.5s ease-in-out; */
-    z-index: 1;
+    z-index: 20;
   }
 
-  .hidden-links .nav-item .active {
-    box-shadow: none;
-    background-color: var(--blue);
+  .hidden-links .nav-item {
+    border: 1px solid red;
+    width: 100%;
   }
-
+  
   .hidden-links .nav-links {
     padding: 1.5rem 0 1.5rem 1.0rem ;
     width: 100%;
     display: table;
   }
+  
+  .hidden-links .nav-item .active {
+    box-shadow: none;
+    background-color: var(--blue);
+    width: 100%;
+  }
 
-  .nav-icon {
+
+  .nav-icon.nav-menu {
     color: var(--bg-white);
     display: flex;
-    margin-right: 15px;
     /* display: block;
     position: absolute;
     top: 0;
@@ -176,16 +192,9 @@
     transform: translate(-100%, 60%); */
     font-size: 1.8rem;
     cursor: pointer;
-
   }
-}
 
-@media screen and (max-width: 620px) {
   .nav-logo {
     display: none;
-  }
-
-  .nav-menu.constant-links {
-    margin-left: 5px;
   }
 }
