--- a/client/src/components/Pages/Home/Home.css
+++ b/client/src/components/Pages/Home/Home.css
@@ -1,9 +1,5 @@
-h1 {
-  font-size: 3.5em;
-}
-
 .title-and-links-container {
-  background-image: url('../../../images/musician.jpeg');
+  background-image: url('../../../images/Mountain.png');
   height: 100vh;
   background-position: top;
   background-repeat: no-repeat;
@@ -14,21 +10,22 @@ h1 {
 .title-and-links {
   text-align: center;
   position: absolute;
-  top: 40%;
-  left: 25%;
+  top: 250px;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .title {
-  color: var(--bg-white);
-  text-shadow: 1px 1px 2px black;
+  color: var(--dark-blue);
+  text-shadow: 1px 1px 2px var(--blue);
+  font-size: 3.5em;
+  font-weight: 300;
 }
 
 .links {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .link {
@@ -46,13 +43,14 @@ h1 {
 }
 
 @media screen and (max-width: 850px) {
-  h1 {
+  .title {
     font-size: 3em;
   }
 
   .title-and-links {
     text-align: center;
     position: absolute;
+    top: 200px;
     left: 50%;
     /* transform: translate(-50%, -50%); */
   }
