--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -60,6 +60,7 @@
 .nav-item {
   margin: 0 3px; 
   height: calc(var(--navbar-height) - 20px);
+  min-width: fit-content;
   /* Space between rows. 1.6 (unitless) is recommended */
   display: flex;
   justify-content: center;
@@ -81,51 +82,13 @@
   box-shadow: 0 0 2pt 1pt var(--dark-blue);
 }
 
-.nav-item.dropdown .active{
-  box-shadow: none;
-}
-
 .dropdown-container {
   position: relative;
 }
 
-.notifications {
-  display: none;
-}
-
-.profile-options {
-  display: none;
-}
-
-.dropdown-container {
-  margin: 0;
-  transition: background-color 0.5s ease;
-}
-
 .dropdown-container:hover {
-  background-color: var(--dark-blue);
   cursor: pointer;
-  border-radius: 3px;
 }
-
-.dropdown.active {
-  outline: 1px solid black;
-  display: block;
-  position: absolute;
-  width: 200px;
-  height: 400px;
-  right: 0;
-  top: 56px;
-}
-
-.notifications.active {
-  background-color: yellow;
-}
-
-.profile-options.active {
-  background-color: lightcoral;
-}
-
 
 @media screen and (max-width: 960px) {
   .nav-icon.nav-menu {
@@ -153,12 +116,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    /* opacity: 1; */
-    transition: all .4s ease-out; 
+    transition: all .4s ease-out;
   }
-
+  
   .nav-menu.hidden-links.active {
     left: 0;
+    z-index: 20;
   }
 
   .hidden-links .nav-item {
@@ -179,7 +142,10 @@
     box-shadow: none;
     background-color: var(--blue);
   }
-
-
+}
+@media screen and (max-width: 580px) { 
+  .dropdown-container {
+    position: static;
+  }
 }
 
