--- a/client/src/components/Pages/Jobmarket/Jobmarket.css
+++ b/client/src/components/Pages/Jobmarket/Jobmarket.css
@@ -104,7 +104,7 @@
   padding: 0 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -112,7 +112,7 @@
   transform: scale(1.025);
 }
 
-.card-button {
+/* .card-button {
   margin: 10px;
   padding: 10px;
   color: var(--black);
@@ -123,15 +123,11 @@
 }
 
 .more-info-button {
-  /* border: 2px solid var(--blue);
-  background-color: white; */
   background-color: #00aeda;
   color: white;
 }
 
 .jq-contact-button {
-  /* border: 2px solid #348d59;
-  background-color: white; */
   background-color: #42b371;
   color: white;
 }
@@ -147,7 +143,7 @@
   background-color: #348d59;
   cursor: pointer;
 }
-
+ */
 
 
 
