--- a/client/src/components/Pages/Profiles/CreateProfile/Views/Skills.css
+++ b/client/src/components/Pages/Profiles/CreateProfile/Views/Skills.css
@@ -1,3 +1,7 @@
+.skills-container {
+  height: 100%;
+}
+
 .skill-container {
   border: 1px solid var(--bg-grey);
   border-radius: 5px;
@@ -5,6 +9,14 @@
   margin: 5px;
 }
 
+.skill-container-selected {
+  background-color: lightgreen;
+}
+
 .skill-container:hover {
   background-color: var(--grey);
+}
+
+.skill-container-selected:hover {
+  background-color: lightcoral;
 }
