css improvements and cache bug fix? (still gives warning)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --bg-white: rgba(240, 240, 240, 1);
+  --light-blue: #a4edff; 
   --blue: #0087a8;
   --dark-blue: #005b72;
   --bg-grey: hsla(192, 17%, 60%, 0.52);
