--- a/client/src/components/Navbar/Dropdowns/Dropdown.css
+++ b/client/src/components/Navbar/Dropdowns/Dropdown.css
@@ -6,10 +6,8 @@
   top: calc(var(--navbar-height) - 5px);
   right: 0;
   overflow: scroll;
-
   border-radius: 10px;
   box-shadow: 2pt 1pt 3pt var(--dark-blue);
-
   animation-name: dropdown-desktop-animation;
   animation-duration: 0.4s;
 }
@@ -17,17 +15,14 @@
 .dropdown::before {
   content: "";
   position: absolute;
-
   width: 0;
   height: 0;
   border-top: 10px solid var(--grey);
   border-left: 10px solid var(--grey);
   border-right: 10px solid transparent;
   border-bottom: 10px solid transparent;
-
   top: -10px;
   right: 30px;
-
   transform: rotate(45deg);
   z-index: -1;
 }
@@ -72,18 +67,29 @@
   font-weight: 300;
 }
 
+.new-group-link {
+  border: 1px solid var(--bg-grey);
+  background-color: var(--bg-grey);
+}
+
+.dropdown-my-groups {
+  border: 1px solid var(--bg-grey);
+  border-radius: 10px;
+  margin: 0 10px;
+}
+
 @media screen and (max-width: 580px) {
   .dropdown {
     width: 100%;
     height: calc(100vh - var(--navbar-height));
     top: calc(var(--navbar-height) - 10px);
     left: 0;
-    box-shadow: 1pt 1pt 3pt var(--dark-blue);;
+    box-shadow: 1pt 1pt 3pt var(--dark-blue);
+    ;
     transform: scale(0.97);
     animation-name: dropdown-mobile-animation;
     animation-duration: 0.4s;
   }
-
   .dropdown::before {
     display: none;
   }
