--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -1,3 +1,5 @@
+/* TOGGLE */
+
 .toggle-container {
   height: 25px;
   width: 50px;
@@ -31,27 +33,28 @@
   left: 25px;
 }
 
+/* BUTTON */
+
 .button-container {
   margin: 10px;
-  
   height: 30px;
   width: fit-content;
   min-width: 50px;
   white-space: nowrap;
-  
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px 15px;
   background-color: #ccd8db83;
   border-radius: 30px;
-
 }
 
 .button-container:hover {
   background-color: var(--grey);
   cursor: pointer;
 }
+
+/* SEARCHBAR */
 
 .searchbar-container {
   --searchbar-height: 40px;
@@ -93,7 +96,7 @@
 
 .searchbar-icon {
   color: var(--searchbar-color);
-  transform: rotate(45deg); 
+  transform: rotate(45deg);
   font-size: 1.3em;
   width: 1ch;
   height: fit-content;
@@ -114,4 +117,92 @@
 .searchbar-icon-container:hover {
   cursor: pointer;
   color: white;
+}
+
+/* LARGE_PROFILE_CARD */
+
+.profile-container {
+  width: 250px;
+  height: 350px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 10pt 1pt var(--bg-grey);
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  transition: transform .2s;
+}
+
+.profile-container:hover {
+  transform: scale(1.025);
+}
+
+.upper-container {
+  width: 100%;
+  height: 50%;
+}
+
+.profile-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  padding-top: 15px;
+}
+
+.lower-container {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.name-container {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-name {
+  font-size: 2em;
+}
+
+.profiles-buttons-container {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.profiles-button {
+  margin: 10px;
+  padding: 10px;
+  color: var(--black);
+  border-style: none;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.to-profile-button {
+  background-color: var(--blue);
+  cursor: pointer;
+}
+
+.profiles-contact-button {
+  background-color: #42b371;
+  cursor: pointer;
+}
+
+.disabled-button {
+  background-color: lightsteelblue;
 }
