--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
   --light-blue: #a4edff; 
   --blue: #0087a8;
   --dark-blue: #005b72;
+  --red: #ba0038;
   --bg-grey: hsla(192, 17%, 60%, 0.52);
   --grey: #ccd8db;
   --black: #242424;
