Loading utility component

--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -1,3 +1,14 @@
+/* LOADING */
+
+.loading-container {
+  background-color: red;
+  width: 100%;
+  height: calc(100vh - var(--navbar-height));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* TOGGLE */
 
 .toggle-container {
