--- a/client/src/components/Pages/Home/Home.css
+++ b/client/src/components/Pages/Home/Home.css
@@ -1,58 +1,17 @@
-.title-and-links-container {
-  background-image: url('../../../images/Mountain.png');
+.home-page-navigation-container {
+  height: var(--navbar-height);
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: tomato;
+}
+
+.home-page-image-container {
+  width: 100vw;
+}
+
+.home-page-image {
+  width: 100vw;
   height: 100vh;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.title-and-links {
-  text-align: center;
-  position: absolute;
-  top: 250px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.title {
-  color: var(--dark-blue);
-  text-shadow: 1px 1px 2px var(--blue);
-  font-size: 3.5em;
-  font-weight: 300;
-}
-
-.links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.link {
-  background-color: var(--blue);
-  min-width: 100px;
-  min-height: 60px;
-  border-radius: 3px;
-  text-decoration: none;
-  font-weight: 500;
-  color: var(--bg-white);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-}
-
-@media screen and (max-width: 850px) {
-  .title {
-    font-size: 3em;
-  }
-
-  .title-and-links {
-    text-align: center;
-    position: absolute;
-    top: 200px;
-    left: 50%;
-    /* transform: translate(-50%, -50%); */
-  }
-
 }
