--- a/client/src/components/Pages/Home/Home.css
+++ b/client/src/components/Pages/Home/Home.css
@@ -1,25 +1,48 @@
-.home-container {}
-
-.home-page-navigation-container {
-  height: var(--navbar-height);
+.home-page-navigation {
   width: 100vw;
+  height: var(--navbar-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: transparent;
   position: fixed;
+z-index: 10;
 }
 
-.home-page-image-and-title-container {
+.home-navigation-link {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+  padding: 10px;
+  background-color: rgba(121, 121, 121, 0.37);
+}
+
+.scroll-container {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+.scroll-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.title-section {
   background-image: url('../../../images/beard-musician-guitar-acoustic.jpeg');
   background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 .title-container {
-  text-align: center;
   position: absolute;
   top: 50%;
   left: 25%;
@@ -33,24 +56,16 @@
   font-weight: 250;
 }
 
-.home-text-section-container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.about-section-container {
+.about-section {
   background-color: blue;
   color: white;
 }
 
-.features-section-container {
+.features-section {
   background-color: rgb(197, 238, 130);
 }
 
-.footer-container {
+.footer-section {
   background-color: black;
   color: white;
 }
