--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -316,3 +316,28 @@
   border-radius: 5px;
   width: 100%;
 }
+
+/* CATEGORY SELECTION */
+
+.skills-container {
+  height: 100%;
+}
+
+.skill-container {
+  border: 1px solid var(--bg-grey);
+  border-radius: 5px;
+  padding: 10px;
+  margin: 5px;
+}
+
+.skill-container-selected {
+  background-color: lightgreen;
+}
+
+.skill-container:hover {
+  background-color: var(--grey);
+}
+
+.skill-container-selected:hover {
+  background-color: lightcoral;
+}
